@@ -1,5 +1,6 @@
 1998-08-27  Alex Roberts  <bse@dial.pipex.com>
 
+	* gE_about.c: Fixed gEdit homepage URL...
 	* gedit.c:
 	* toolbar.c: Removed annoying Debug code...
 
